# apartment_notifier

./: .env  .env.example  .gitignore  .pylintrc  README.md  README_SCRAPERS.md  alembic.ini  fb_session.json  pyproject.toml  requirements.txt  settings.json
ai/: ai-service-layers.md
config/: scraper_config.json
sql_tables/: apartments.csv
src/: __init__.py  app.py  config.py  credentials.json  example_usage.py
src/db/: model.py  mongo_database.py  sql_database.py
src/db/sql/: sql_mixins.py
src/llms/: deepseek_api.py
src/services/apartment/: apartment_api.py  apartment_api_schemas.py  apartment_bl.py  apartment_dal.py  apartment_models.py
src/services/facebook_groups/: __init__.py  bl.py  dal.py  facebook_groups_bl.py  facebook_groups_dal.py  facebook_groups_models.py  models.py
src/services/mail_provider/: config.py  example_usage.py  gmail_provider.py  mail_provider.py  mail_provider_factory.py
src/services/notification/: notification_api.py  notification_api_schemas.py  notification_bl.py  notification_dal.py  notification_models.py  notification_service.py
src/services/scraper/: __init__.py  scraper_users_bl.py  scraper_users_dal.py  scraper_users_models.py
src/services/scraper_users/: scraper_users_bl.py  scraper_users_dal.py  scraper_users_models.py
src/services/scraper_users_facebook_groups/: bl.py  dal.py  models.py  scraper_users_facebook_groups_bl.py  scraper_users_facebook_groups_dal.py
src/services/user/: user_api.py  (+4 more)
src/workers/: facebook_group_scraper.py  facebook_public_groups.py
tests/: conftest.py  test_telegram_bot.py
(+57 files in other folders)
