[tool.poetry]
name = "apartment-notifier"
version = "0.1.0"
description = "A FastAPI service to notify users of new apartment listings via Telegram. Hybrid DB approach with PostgreSQL and MongoDB."
authors = ["You <you@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.28" }
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.6.3" }
python-dotenv = "^1.0.1"
aiogram = "^3.4.1"
httpx = "^0.27.0"
alembic = "^1.13.1"
motor = "^3.2.0"
beanie = "^1.29.0"
playwright = "^1.51.0"
bs4 = "^0.0.2"
openai = "^1.70.0"
htmlmin = "^0.1.12"
psycopg2-binary = "^2.9.10"
sentence-transformers = "^2.2.2"
numpy = "^1.24.0"
pgvector = "^0.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
alembic = "^1.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "logging-fstring-interpolation"
]